--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi {{ user.username }}.</h1>
+    <h1>Hello {{ current_user.username }}.</h1>
     {% for post in posts %}
-    <div><p>{{ post.id.username }}: {{ post.body }}</p></div>
+    <div><p>{{ post.author.username }}: {{ post.body }}</p></div>
     {% endfor %}
 {% endblock %}
