--- a/microblog/app/templates/_post.html
+++ b/microblog/app/templates/_post.html
@@ -1,9 +1,17 @@
-<table>
-    <tr valign="top">
-        <td><img src="{{ post.author.avatar(36) }}" alt="Post Author Avatar"></td>
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                <img src="{{ post.author.avatar(70) }}" alt="Post Author Avatar">
+            </a>
+        </td>            
         <td>
-            <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
-            says:<br>{{ post.body }}
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                {{ post.author.username }}
+            </a>
+            says:
+            <br>
+            {{ post.body }}
         </td>
     </tr>
 </table>
